(Unsuccessful so far) Trying to found the bug

--- a/docs/LateDE_test.ipynb
+++ b/docs/LateDE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3f7bbd4",
+   "id": "59f9952e",
    "metadata": {},
    "source": [
     "### Late Dark Energy  \n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6eb4df04",
+   "execution_count": 1,
+   "id": "b2c623c3",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60ab10f",
+   "id": "aa6a0189",
    "metadata": {},
    "source": [
     "### Basic test: CAMBLateDE"
@@ -46,15 +46,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "39667292",
+   "execution_count": 2,
+   "id": "fd4a805f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Model (It should be 1):            0\n",
+      " ----------------------------\n",
+      " Eqn of State (w0, w1, ..., w10): \n",
+      " w0  -1.0000000000000000     \n",
+      " w1  -1.0000000000000000     \n",
+      " w2  -1.0000000000000000     \n",
+      " w3  -1.0000000000000000     \n",
+      " w4  -1.0000000000000000     \n",
+      " w5  -1.0000000000000000     \n",
+      " w6  -1.0000000000000000     \n",
+      " w7  0.69999999999999996     \n",
+      " w8   1.3999999999999999     \n",
+      " w9   2.1000000000000001     \n",
+      " w10   2.7999999999999998     \n",
+      " ----------------------------\n",
+      " Redshift (z1, z2 ,..., z10) : \n",
+      " z1   3.5000000000000000     \n",
+      " z2   4.2000000000000002     \n",
+      " z3   4.9000000000000004     \n",
+      " z4   5.5999999999999996     \n",
+      " z5   6.2999999999999998     \n",
+      " z6   7.0000000000000000     \n",
+      " z7   0.0000000000000000     \n",
+      " z8   0.0000000000000000     \n",
+      " z9   0.0000000000000000     \n",
+      " z10   0.0000000000000000     \n"
+     ]
+    }
+   ],
    "source": [
     "latedeCosmology = camb.set_params(# Background\n",
     "                            H0 = 70, ombh2=0.02238280, omch2=0.1201075, TCMB = 2.7255,\n",
     "                            dark_energy_model = 'LateDE',\n",
-    "                            w0 = -0.9123, w1 = 0, model = 10,\n",
+    "                            w0 = -0.9, w1 = 0, model = 1,\n",
     "                            # Neutrinos\n",
     "                            omnuh2 = 0, num_nu_massless=3.044, num_nu_massive = 0,\n",
     "                            nu_mass_degeneracies=[0], nu_mass_numbers = [0],\n",
@@ -70,17 +103,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "be74800a",
+   "execution_count": 3,
+   "id": "d2612a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class: <LateDE>\n",
+      " model = 1\n",
+      " w0 = -0.9\n",
+      " w1 = 0.0\n",
+      " w2 = -1.0\n",
+      " w3 = -1.0\n",
+      " w4 = -1.0\n",
+      " w5 = -1.0\n",
+      " w6 = -1.0\n",
+      " w7 = -1.0\n",
+      " w8 = -1.0\n",
+      " w9 = -1.0\n",
+      " w10 = -1.0\n",
+      " z1 = 0.7\n",
+      " z2 = 1.4\n",
+      " z3 = 2.1\n",
+      " z4 = 2.8\n",
+      " z5 = 3.5\n",
+      " z6 = 4.2\n",
+      " z7 = 4.9\n",
+      " z8 = 5.6\n",
+      " z9 = 6.3\n",
+      " z10 = 7.0\n",
+      " fac1 = 0.0\n",
+      " fac2 = 0.0\n",
+      " fac3 = 0.0\n",
+      " fac4 = 0.0\n",
+      " fac5 = 0.0\n",
+      " fac6 = 0.0\n",
+      " fac7 = 0.0\n",
+      " fac8 = 0.0\n",
+      " fac9 = 0.0\n",
+      " fac10 = 0.0\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(latedeResults.Params.DarkEnergy)\n",
+    "# This is bizarre: Comparing the redshifts from the above output with those below we see that:\n",
+    "# z_fortran - z_python = 2.8 for all z from z1 to z6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ccf8d1ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2ed832e7d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fe4722e0cd0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -104,7 +190,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "623da1ad",
+   "id": "770e9254",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1865b6df",
    "metadata": {},
    "outputs": [],
    "source": []
