--- a/docs/LateDE_test.ipynb
+++ b/docs/LateDE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59f9952e",
+   "id": "09a865d5",
    "metadata": {},
    "source": [
     "### Late Dark Energy  \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2c623c3",
+   "id": "246c2f99",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6a0189",
+   "id": "91665be5",
    "metadata": {},
    "source": [
     "### Basic test: CAMBLateDE"
@@ -47,8 +47,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd4a805f",
-   "metadata": {},
+   "id": "ac8e770e",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -64,18 +66,18 @@
       " w4  -1.0000000000000000     \n",
       " w5  -1.0000000000000000     \n",
       " w6  -1.0000000000000000     \n",
-      " w7  0.69999999999999996     \n",
-      " w8   1.3999999999999999     \n",
-      " w9   2.1000000000000001     \n",
-      " w10   2.7999999999999998     \n",
+      " w7   1.0000000000000000     \n",
+      " w8   2.0000000000000000     \n",
+      " w9   3.0000000000000000     \n",
+      " w10   4.0000000000000000     \n",
       " ----------------------------\n",
       " Redshift (z1, z2 ,..., z10) : \n",
-      " z1   3.5000000000000000     \n",
-      " z2   4.2000000000000002     \n",
-      " z3   4.9000000000000004     \n",
-      " z4   5.5999999999999996     \n",
-      " z5   6.2999999999999998     \n",
-      " z6   7.0000000000000000     \n",
+      " z1   5.0000000000000000     \n",
+      " z2   6.0000000000000000     \n",
+      " z3   7.0000000000000000     \n",
+      " z4   8.0000000000000000     \n",
+      " z5   9.0000000000000000     \n",
+      " z6   10.000000000000000     \n",
       " z7   0.0000000000000000     \n",
       " z8   0.0000000000000000     \n",
       " z9   0.0000000000000000     \n",
@@ -104,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2612a23",
+   "id": "01d5fe67",
    "metadata": {},
    "outputs": [
     {
@@ -124,16 +126,16 @@
       " w8 = -1.0\n",
       " w9 = -1.0\n",
       " w10 = -1.0\n",
-      " z1 = 0.7\n",
-      " z2 = 1.4\n",
-      " z3 = 2.1\n",
-      " z4 = 2.8\n",
-      " z5 = 3.5\n",
-      " z6 = 4.2\n",
-      " z7 = 4.9\n",
-      " z8 = 5.6\n",
-      " z9 = 6.3\n",
-      " z10 = 7.0\n",
+      " z1 = 1.0\n",
+      " z2 = 2.0\n",
+      " z3 = 3.0\n",
+      " z4 = 4.0\n",
+      " z5 = 5.0\n",
+      " z6 = 6.0\n",
+      " z7 = 7.0\n",
+      " z8 = 8.0\n",
+      " z9 = 9.0\n",
+      " z10 = 10.0\n",
       " fac1 = 0.0\n",
       " fac2 = 0.0\n",
       " fac3 = 0.0\n",
@@ -157,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ccf8d1ef",
+   "id": "309fc3d0",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770e9254",
+   "id": "35b50a91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1865b6df",
+   "id": "af51e7b7",
    "metadata": {},
    "outputs": [],
    "source": []
