Weird parameters behavior: TODO: fix

--- a/docs/LateDE_test.ipynb
+++ b/docs/LateDE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09a865d5",
+   "id": "38171892",
    "metadata": {},
    "source": [
     "### Late Dark Energy  \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "246c2f99",
+   "id": "c37b62a7",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91665be5",
+   "id": "4defbec7",
    "metadata": {},
    "source": [
     "### Basic test: CAMBLateDE"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ac8e770e",
+   "id": "f0caaf33",
    "metadata": {
     "scrolled": false
    },
@@ -59,13 +59,13 @@
       " Model (It should be 1):            0\n",
       " ----------------------------\n",
       " Eqn of State (w0, w1, ..., w10): \n",
-      " w0  -1.0000000000000000     \n",
-      " w1  -1.0000000000000000     \n",
-      " w2  -1.0000000000000000     \n",
-      " w3  -1.0000000000000000     \n",
-      " w4  -1.0000000000000000     \n",
-      " w5  -1.0000000000000000     \n",
-      " w6  -1.0000000000000000     \n",
+      " w0  -4.0000000000000000     \n",
+      " w1  -5.0000000000000000     \n",
+      " w2  -6.0000000000000000     \n",
+      " w3  -7.0000000000000000     \n",
+      " w4  -8.0000000000000000     \n",
+      " w5  -9.0000000000000000     \n",
+      " w6  -10.000000000000000     \n",
       " w7   1.0000000000000000     \n",
       " w8   2.0000000000000000     \n",
       " w9   3.0000000000000000     \n",
@@ -89,7 +89,9 @@
     "latedeCosmology = camb.set_params(# Background\n",
     "                            H0 = 70, ombh2=0.02238280, omch2=0.1201075, TCMB = 2.7255,\n",
     "                            dark_energy_model = 'LateDE',\n",
-    "                            w0 = -0.9, w1 = 0, model = 1,\n",
+    "                            model = 1,\n",
+    "                            w0=0, w1=-1, w2=-2, w3=-3, w4=-4, w5=-5, w6=-6, w7=-7, w8=-8, w9=-9, w10=-10,\n",
+    "                            z1=1, z2=2, z3=3, z4=4, z5=5, z6=6, z7=7, z8=8, z9=9, z10=10,\n",
     "                            # Neutrinos\n",
     "                            omnuh2 = 0, num_nu_massless=3.044, num_nu_massive = 0,\n",
     "                            nu_mass_degeneracies=[0], nu_mass_numbers = [0],\n",
@@ -97,16 +99,13 @@
     "                            As = 2.100549e-09, ns = 0.9660499, \n",
     "                            YHe = 0.246, WantTransfer=True)\n",
     "\n",
-    "latedeResults = camb.get_results(latedeCosmology)\n",
-    "scales = np.logspace(-6, 0, 200)\n",
-    "rhode, w = latedeResults.get_dark_energy_rho_w(scales)\n",
-    "omegade = latedeResults.get_Omega('de', z = 1/scales - 1)"
+    "latedeResults = camb.get_results(latedeCosmology)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "01d5fe67",
+   "id": "d4367188",
    "metadata": {},
    "outputs": [
     {
@@ -115,17 +114,17 @@
      "text": [
       "class: <LateDE>\n",
       " model = 1\n",
-      " w0 = -0.9\n",
-      " w1 = 0.0\n",
-      " w2 = -1.0\n",
-      " w3 = -1.0\n",
-      " w4 = -1.0\n",
-      " w5 = -1.0\n",
-      " w6 = -1.0\n",
-      " w7 = -1.0\n",
-      " w8 = -1.0\n",
-      " w9 = -1.0\n",
-      " w10 = -1.0\n",
+      " w0 = 0.0\n",
+      " w1 = -1.0\n",
+      " w2 = -2.0\n",
+      " w3 = -3.0\n",
+      " w4 = -4.0\n",
+      " w5 = -5.0\n",
+      " w6 = -6.0\n",
+      " w7 = -7.0\n",
+      " w8 = -8.0\n",
+      " w9 = -9.0\n",
+      " w10 = -10.0\n",
       " z1 = 1.0\n",
       " z2 = 2.0\n",
       " z3 = 3.0\n",
@@ -152,23 +151,27 @@
    ],
    "source": [
     "print(latedeResults.Params.DarkEnergy)\n",
-    "# This is bizarre: Comparing the redshifts from the above output with those below we see that:\n",
-    "# z_fortran - z_python = 2.8 for all z from z1 to z6"
+    "# Comparing the previous output with the one of this cell we see a weird result: \n",
+    "# The value of w7 is in someway being override by the value of z1, w8 by z2 and so forth.\n",
+    "# On other words, it looks like a shift overriding the last 4 \"ws\" by the first 4 \"zs\".\n",
+    "#---------------\n",
+    "# This cell shows the CORRECT and EXPECTED ouput since it came from the set_params on dark_energy.py\n",
+    "# The above cell shows the WEIRD and WORONG output obtained placing \"write(*,*)\" inside the Init subroutine on LateDarkEnergy.f90 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "309fc3d0",
+   "execution_count": 4,
+   "id": "681918f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe4722e0cd0>]"
+       "[<matplotlib.lines.Line2D at 0x7faef4395410>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,13 +189,17 @@
     }
    ],
    "source": [
+    "scales = np.logspace(-6, 0, 200)\n",
+    "rhode, w = latedeResults.get_dark_energy_rho_w(scales)\n",
+    "omegade = latedeResults.get_Omega('de', z = 1/scales - 1)\n",
+    "\n",
     "plt.semilogx(scales, rhode)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b50a91",
+   "id": "ffc022be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af51e7b7",
+   "id": "0bd7c8ea",
    "metadata": {},
    "outputs": [],
    "source": []
