SOLVED previous committed bug.

--- a/docs/LateDE_test.ipynb
+++ b/docs/LateDE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38171892",
+   "id": "270ddaa3",
    "metadata": {},
    "source": [
     "### Late Dark Energy  \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c37b62a7",
+   "id": "ec3d7d9c",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4defbec7",
+   "id": "641e935d",
    "metadata": {},
    "source": [
     "### Basic test: CAMBLateDE"
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f0caaf33",
+   "execution_count": 5,
+   "id": "169c236f",
    "metadata": {
     "scrolled": false
    },
@@ -56,32 +56,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Model (It should be 1):            0\n",
+      " Model (It should be 1):            2\n",
       " ----------------------------\n",
       " Eqn of State (w0, w1, ..., w10): \n",
-      " w0  -4.0000000000000000     \n",
-      " w1  -5.0000000000000000     \n",
-      " w2  -6.0000000000000000     \n",
-      " w3  -7.0000000000000000     \n",
-      " w4  -8.0000000000000000     \n",
-      " w5  -9.0000000000000000     \n",
-      " w6  -10.000000000000000     \n",
-      " w7   1.0000000000000000     \n",
-      " w8   2.0000000000000000     \n",
-      " w9   3.0000000000000000     \n",
-      " w10   4.0000000000000000     \n",
+      " w0   0.0000000000000000     \n",
+      " w1  -1.0000000000000000     \n",
+      " w2  -2.0000000000000000     \n",
+      " w3  -3.0000000000000000     \n",
+      " w4  -4.0000000000000000     \n",
+      " w5  -5.0000000000000000     \n",
+      " w6  -6.0000000000000000     \n",
+      " w7  -7.0000000000000000     \n",
+      " w8  -8.0000000000000000     \n",
+      " w9  -9.0000000000000000     \n",
+      " w10  -10.000000000000000     \n",
       " ----------------------------\n",
       " Redshift (z1, z2 ,..., z10) : \n",
-      " z1   5.0000000000000000     \n",
-      " z2   6.0000000000000000     \n",
-      " z3   7.0000000000000000     \n",
-      " z4   8.0000000000000000     \n",
-      " z5   9.0000000000000000     \n",
-      " z6   10.000000000000000     \n",
-      " z7   0.0000000000000000     \n",
-      " z8   0.0000000000000000     \n",
-      " z9   0.0000000000000000     \n",
-      " z10   0.0000000000000000     \n"
+      " z1   1.0000000000000000     \n",
+      " z2   2.0000000000000000     \n",
+      " z3   3.0000000000000000     \n",
+      " z4   4.0000000000000000     \n",
+      " z5   5.0000000000000000     \n",
+      " z6   6.0000000000000000     \n",
+      " z7   7.0000000000000000     \n",
+      " z8   8.0000000000000000     \n",
+      " z9   9.0000000000000000     \n",
+      " z10   10.000000000000000     \n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d4367188",
+   "id": "e393716e",
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,10 @@
      "output_type": "stream",
      "text": [
       "class: <LateDE>\n",
+      " cs2_lam = 1.0\n",
+      " w_lam = -1.0\n",
+      " wa = 0.0\n",
+      " no_perturbations = False\n",
       " model = 1\n",
       " w0 = 0.0\n",
       " w1 = -1.0\n",
@@ -151,24 +155,19 @@
    ],
    "source": [
     "print(latedeResults.Params.DarkEnergy)\n",
-    "# Comparing the previous output with the one of this cell we see a weird result: \n",
-    "# The value of w7 is in someway being override by the value of z1, w8 by z2 and so forth.\n",
-    "# On other words, it looks like a shift overriding the last 4 \"ws\" by the first 4 \"zs\".\n",
-    "#---------------\n",
-    "# This cell shows the CORRECT and EXPECTED ouput since it came from the set_params on dark_energy.py\n",
-    "# The above cell shows the WEIRD and WORONG output obtained placing \"write(*,*)\" inside the Init subroutine on LateDarkEnergy.f90 "
+    "# BUG - SOLVED !"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "681918f6",
+   "id": "c6822b8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faef4395410>]"
+       "[<matplotlib.lines.Line2D at 0x7ff7eb6e3a50>]"
       ]
      },
      "execution_count": 4,
@@ -199,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc022be",
+   "id": "45e72f63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd7c8ea",
+   "id": "702d0dcf",
    "metadata": {},
    "outputs": [],
    "source": []
