Organizing and numbering the sections

--- a/docs/LateDE_test.ipynb
+++ b/docs/LateDE_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "613d6153",
+   "id": "f0c5e349",
    "metadata": {},
    "source": [
     "### Late Dark Energy  \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6ef4bcd6",
+   "id": "47d406f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3380294",
+   "id": "abd1e1f4",
    "metadata": {},
    "source": [
-    "### $\\Lambda$CDM: CAMBBase vs CAMBLateDE"
+    "### Section 1 - $\\Lambda$CDM: CAMBBase vs CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2a37651",
+   "id": "9912aa1f",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b01a7b4d",
+   "id": "e336ae28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "92f17d53",
+   "id": "d61e3969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71624ca7",
+   "id": "f03f307c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1127f3fe",
+   "id": "979fdbd7",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a5c46a1",
+   "id": "52cf54e5",
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7596c08",
+   "id": "d2fc0906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5f0239bb",
+   "id": "fa7024d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ced95389",
+   "id": "1b4fe15c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de4ba15f",
+   "id": "9266164f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ebd2cd77",
+   "id": "60fb9bd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "00f98338",
+   "id": "5e8a3fff",
    "metadata": {
     "scrolled": false
    },
@@ -380,16 +380,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b02726",
+   "id": "c2a16bae",
    "metadata": {},
    "source": [
-    "### $w$CDM: CAMBBase vs CAMBLateDE"
+    "### Section 2 - $w$CDM: CAMBBase vs CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "524b4b79",
+   "id": "d3181a31",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da797f16",
+   "id": "6caf6dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7ea68fdb",
+   "id": "29ea1446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "95495732",
+   "id": "b9f2e45b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "37485914",
+   "id": "58c2f5e8",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9728ad95",
+   "id": "1781d48c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05622f3b",
+   "id": "5367c8d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a29fe97",
+   "id": "02e280c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f036fdd",
+   "id": "6cb52938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "199cce94",
+   "id": "80f29a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0007a1b7",
+   "id": "72440123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2021fd59",
+   "id": "8a27c4a5",
    "metadata": {
     "scrolled": false
    },
@@ -759,16 +759,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f78956",
+   "id": "1c23e13f",
    "metadata": {},
    "source": [
-    "### $w_0w_a$CDM: CAMBBase vs CAMBLateDE"
+    "### Section 3 - $w_0w_a$CDM: CAMBBase vs CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ac3a616",
+   "id": "52457827",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83e6c137",
+   "id": "c81d4b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c187996",
+   "id": "9e9e3134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "02204d4e",
+   "id": "9d963cf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09716f6e",
+   "id": "d4dacffd",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "91a896af",
+   "id": "717fe266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60a853de",
+   "id": "8af53ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a343669c",
+   "id": "80b9fa95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "729a0fc0",
+   "id": "6ceada64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5d9e22ad",
+   "id": "4022783e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e2242d88",
+   "id": "e8b81ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "afd2c8eb",
+   "id": "40dbef83",
    "metadata": {
     "scrolled": false
    },
@@ -1138,16 +1138,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55533180",
+   "id": "0c52c8a1",
    "metadata": {},
    "source": [
-    "### Bin$w$: CAMBLateDE"
+    "### Section 4 - Bin$w$: CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5731d4fc",
+   "id": "db4bf675",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec87e00b",
+   "id": "cfd22393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "186565d0",
+   "id": "ac466b9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb949d1c",
+   "id": "5dc96e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "770203e2",
+   "id": "bd7b3cdf",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5d9eedf7",
+   "id": "744f18c1",
    "metadata": {},
    "outputs": [
     {
@@ -1311,16 +1311,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5413b12",
+   "id": "db041ec0",
    "metadata": {},
    "source": [
-    "### 3 - Bin$w$: CAMBLateDE vs CAMBMultiFluidDE"
+    "### Section 5 - 3 Bin$w$: CAMBLateDE vs CAMBMultiFluidDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3a308b6",
+   "id": "fb1c0139",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e6752731",
+   "id": "8cdd0de8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc7c2657",
+   "id": "c95566c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0aa2569",
+   "id": "1b07b90d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d86f6c07",
+   "id": "071bd9ad",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb249638",
+   "id": "72f39a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9df091fa",
+   "id": "d9010006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f265920",
+   "id": "0bdd788e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac3eefe3",
+   "id": "e082d86e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "39881a59",
+   "id": "3acf27bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "387156ea",
+   "id": "97ec0e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76fe0c07",
+   "id": "ab370875",
    "metadata": {
     "scrolled": false
    },
@@ -1699,16 +1699,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cbba8e",
+   "id": "a00cb762",
    "metadata": {},
    "source": [
-    "### 5 - Bin$w$: CAMBBase vs CAMBLateDE"
+    "### Section 6 - 5 Bin$w$: CAMBBase vs CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e674d29",
+   "id": "7a0e3c17",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e11c598d",
+   "id": "79a32f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6b6ee897",
+   "id": "87104b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2e6b735e",
+   "id": "da8c7b21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e52cedfb",
+   "id": "4f1138ef",
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8b2957ef",
+   "id": "3ccdab75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a29f7ee9",
+   "id": "39b970c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22ef7736",
+   "id": "82cbfef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1897,7 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "993cd2b3",
+   "id": "76e22db9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7893e81",
+   "id": "b6beef49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1949,7 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f702c53",
+   "id": "b729a167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee26bb89",
+   "id": "ca8ebfd0",
    "metadata": {
     "scrolled": false
    },
@@ -2087,16 +2087,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4246ff63",
+   "id": "c23a3dd6",
    "metadata": {},
    "source": [
-    "### 10 - Bin$w$: CAMBBase vs CAMBLateDE"
+    "### Section 7 - 10 Bin$w$: CAMBBase vs CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b7ea684c",
+   "id": "8110a8df",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "99747cc3",
+   "id": "14429f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa0f9235",
+   "id": "f9d7b85b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21eeb052",
+   "id": "e4018ba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8ccfe06a",
+   "id": "e0ca0f17",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3c803e7",
+   "id": "4c72b65e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff3fa36a",
+   "id": "a6cb2a64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2263,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ec5350a",
+   "id": "e7a924c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2285,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bfba4c71",
+   "id": "d0598151",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2312,7 +2312,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad69e573",
+   "id": "7e57d5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2337,7 +2337,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7df60c7",
+   "id": "b77fa198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "85ce4e70",
+   "id": "ddcf2ff0",
    "metadata": {
     "scrolled": false
    },
@@ -2475,16 +2475,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0d279b",
+   "id": "b06a3b45",
    "metadata": {},
    "source": [
-    "### 11 - Binned Linear $w(z)$: 2 BINS - CAMBLateDE"
+    "### Section 8 - Binned Linear $w(z)$: 2 BINS - CAMBLateDE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41fb1bbb",
+   "id": "fe849bed",
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03d462e2",
+   "id": "95901573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2531,7 +2531,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "05168220",
+   "id": "0ffe9fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2548,7 +2548,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "901f8fc2",
+   "id": "9b12f184",
    "metadata": {
     "scrolled": false
    },
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "45bf3e4f",
+   "id": "ac6f7385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "981f2ea1",
+   "id": "4302408f",
    "metadata": {},
    "outputs": [
     {
@@ -2712,7 +2712,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "08e60373",
+   "id": "50204dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2736,7 +2736,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9f21ebe8",
+   "id": "c7b20b82",
    "metadata": {
     "scrolled": false
    },
@@ -2808,7 +2808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f121ae27",
+   "id": "23e346ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb19a7a",
+   "id": "e36568fe",
    "metadata": {},
    "outputs": [],
    "source": []
